# Assistante

./: .env.example  .gitignore  App Documentation  CONTEXT_MEMORY.txt  Changelog.md  README.md  check_sentinel_db.py  check_sentinel_details.py  check_sentinel_timestamps.py  cleanup_db.py  fix_img.py  fix_img_port.py  fix_mem.py  fix_stores.py  inspect_sentinel_db.py  test_ag.py  tmp_check_channels.py  tmp_check_channels_v2.py  tmp_check_db.py  tmp_dump_db.py  update_context.py  update_mem.py
backend/: _tmp_unused.json  active_tasks_full.txt  add_models.py  add_models_3.py  agent_status.txt  analyze_fixer_loop.py  backend_crash_utf8.txt  backend_log_latest_utf8.txt  backend_log_utf8.txt  capture_ui_glitches.py  chat_probe_payload.json  check_active_activity.py  check_active_tasks.py  check_agents.py  check_config.py  check_db.py  check_db_agents.py  check_db_limits.py  check_db_models.py  check_fixer_convs.py  check_janny_prompt.py  check_janny_tools.py  check_loop_content.py  check_model_mismatch.py  check_models.py  check_path.py  check_schema.py  check_sig.py  check_stuck.py  cleanup_models.py  clear_tasks.py  count_messages.py  db_dump.txt  delegate_probe_payload.json  delegate_probe_payload2.json  delegate_probe_payload3.json  delegate_probe_payload4.json  delegate_probe_payload6.json  delete_janny_conv.py  dummy.webm  (+82 more)
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/scripts/: check_agents_db.py  cleanup_all_messages.py  deep_search_db.py  list_gemini_models.py  refine_models.py
backend/tests/: test_pruner_performance.py  test_pruning_fix.py
(+265 files in other folders)
