[project]
name = "assitance"
version = "0.1.0"
description = "Multi-purpose AI assistant with flexible model support"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "openai>=1.40",
    "anthropic>=0.34",
    "ollama>=0.4",
    "python-multipart>=0.0.9",
    "cryptography>=43.0",
    "duckduckgo-search>=6.0",
    "websockets>=13.0",
    "google-genai>=1.65.0",
    "chromadb>=1.5.2",
    "pypdf2>=3.0.1",
    "sentence-transformers>=5.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
